Fix deprecated calls to newInstance()