@@ -44,8 +44,8 @@ public final class EngineFactory {
         // try next one
       }
       // fall back to zero arg constructor
-      return clazz.newInstance();
-    } catch (final ClassNotFoundException | InstantiationException | InvocationTargetException | IllegalAccessException e) {
+      return clazz.getDeclaredConstructor().newInstance();
+    } catch (final ClassNotFoundException | InstantiationException | InvocationTargetException | IllegalAccessException | NoSuchMethodException e) {
       throw new RuntimeException(e);
     }
   }
